optimize alexander's image

--- a/docs/default-firebase-data.json
+++ b/docs/default-firebase-data.json
@@ -497,8 +497,8 @@
       "country": "St. Petersburg, Russia",
       "featured": true,
       "name": "Alexander Podkhalyuzin",
-      "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/alexander-podkhalyuzin-safela.png",
-      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2Falexander-podkhalyuzin-safela.png?alt=media&token=fb9bf988-a8b5-448b-9207-83c32d328fe6",
+      "photo": "gs://dev-fest-sofia-2019.appspot.com/speakers/alexander-podkhalyuzin.jpg",
+      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/dev-fest-sofia-2019.appspot.com/o/speakers%2Falexander-podkhalyuzin.jpg?alt=media&token=4b2aff06-5683-4c87-a2f0-6261a5cf044c",
       "shortBio": "Kotlin IDE team lead. He joined Kotlin team few years ago, before that he was responsible for Scala plugin for IntelliJ IDEA for nine years.",
       "socials": [],
       "order": 1,
